# file-organizer

./: .gitignore  README.md  backup.py  cli.py  fix_imports.py  generate_prompt.json  generate_prompt.py  gpt_prompt.txt  main.py  organize.py  package-lock.json  package.json  plan.json  pyproject.toml  reorganize.py  requirements-api.txt  requirements.txt  scanner.py  setup.py  test_components.py  tsconfig.json  webpack.config.js
backend/: __init__.py  scanner.py
backend/api/: __init__.py  main.py
backend/config/: __init__.py  settings.py
backend/core/: backup.py  organizer.py  prompt_generator.py  scanner.py
backend/utils/: main_cli.py
data/: backup_manifest.json  gpt_prompt.txt  organization_results.json  plan.json  scan_results.json
frontend/: package-lock.json  package.json
frontend/electron/: main.js  preload.js
frontend/public/: index.html
frontend/src/: App.tsx  Test.tsx
frontend/src/components/: FolderTreePreview.tsx
frontend/src/contexts/: AppStateContext.tsx
frontend/src/pages/: AccountPage.tsx  HomePage.tsx  OrganizePage.tsx  ScanPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
public/: index.html
scripts/: create_test_folder.py  run_api.sh  run_dev.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/main/: main.ts  preload.js
src/renderer/: App.tsx
test_folder/Archive/Old_Reports/: report_2020.doc
test_folder/Work/Projects/Active/: project_notes.txt
tests/: test_api.py  test_components.py
