[tool.poetry]
    name = "file-organizer"
    version = "1.0.0"
    description = "AI-powered file organization desktop app"
    authors = ["Your Name <your.email@example.com>"]

    [tool.poetry.dependencies]
    python = "^3.8"
    fastapi = "^0.104.0"
    uvicorn = {extras = ["standard"], version = "^0.24.0"}
    pydantic = "^2.0.0"
    tqdm = "^4.65.0"
    python-docx = "^0.8.11"
    PyMuPDF = "^1.23.0"

    [tool.poetry.dev-dependencies]
    pytest = "^7.4.0"
    black = "^23.0.0"
    flake8 = "^6.0.0"
    mypy = "^1.0.0"

    [build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"

    [tool.black]
    line-length = 100
    target-version = ['py38']

    [tool.mypy]
    python_version = "3.8"
    warn_return_any = true
    warn_unused_configs = true
    